--- a/css/User-AddCar.css
+++ b/css/User-AddCar.css
@@ -9,7 +9,7 @@ html {
 body {
     font-family: montserrat, arial, verdana;
     background: no-repeat url("../img/addbackprofile.jpg");
-    background-size: cover;
+    background-size: 126%;
 }
 #msform {
     width: 1000px;
@@ -258,4 +258,61 @@ body {
 }
 .profile-image.hasImg{
     display: block;
+}
+
+
+
+/* part of upload */
+
+
+.upload-img {
+    position: relative;
+    max-width: 205px;
+    margin: 50px 23%;
+}
+.upload-img .img-edit {
+    position: absolute;
+    right: 12px;
+    z-index: 1;
+    top: 27px;
+}
+.upload-img .img-edit input {
+    display: none;
+}
+.upload-img .img-edit input + label {
+    display: inline-block;
+    width: 34px;
+    height: 34px;
+    margin-bottom: 0;
+    border-radius: 100%;
+    background: #FFFFFF;
+    border: 1px solid transparent;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+    font-weight: normal;
+    transition: all 0.2s ease-in-out;
+}
+.upload-img .img-edit input + label:hover {
+    background: #f1f1f1;
+    border-color: #d6d6d6;
+}
+.upload-img .img-edit input + label:after {
+
+
+}
+.upload-img .img-preview {
+    width: 192px;
+    height: 192px;
+    position: relative;
+    border-radius: 100%;
+    border: 6px solid #F8F8F8;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+}
+.upload-img .img-preview > div {
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
