--- a/css/profilePage.css
+++ b/css/profilePage.css
@@ -1,121 +1,219 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 
-* {margin: 0; padding: 0;}
+* {
+    margin: 0;
+    padding: 0;
+}
 
 html {
-	height: 100%;
+    height: 100%;
 }
 
 body {
-	font-family: montserrat, arial, verdana;
-	background: no-repeat url("../img/profilepagebackground.jpg");
-	background-size: cover;
+    font-family: montserrat, arial, verdana;
+    background: no-repeat url("../img/profilepagebackground.jpg");
+    background-size: cover;
+    height: 100%;
 }
+
+@font-face {
+    font-family: "MyFont";
+    src: url(../fonts/WHOOPASS.TTF);
+}
+
+.myInfo {
+    font-family: MyFont;
+}
+
+@font-face {
+    font-family: "Amazon_font";
+    src: url("../fonts/Amazonas.ttf");
+}
+
+.Amazon {
+    font-family: Amazon_font;
+}
+
 #msform {
-	width: 1000px;
-	margin: 60px 245px;
-	text-align: center;
-	position: relative;
+    width: 1000px;
+    margin: 60px 245px;
+    text-align: center;
+    position: relative;
 }
+
 #msform fieldset {
-	background: white;
-	border: 0 none;
-	border-radius: 3px;
-	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-	padding: 20px 30px;
-	box-sizing: border-box;
-	width: 80%;
-	margin: 0 10%;
-	position: relative;
+    background: white;
+    border: 0 none;
+    border-radius: 3px;
+    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+    padding: 20px 30px;
+    box-sizing: border-box;
+    width: 80%;
+    margin: 0 10%;
+    position: relative;
 }
 
 #msform fieldset:not(:first-of-type) {
-	display: none;
+    display: none;
 }
+
 #msform input, #msform textarea, #msform select {
-	padding: 15px;
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	margin-bottom: 10px;
-	width: 100%;
-	box-sizing: border-box;
-	font-family: montserrat;
-	color: #2C3E50;
-	font-size: 13px;
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    margin-bottom: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    font-family: montserrat;
+    color: #2C3E50;
+    font-size: 13px;
 }
+
 #msform .action-button {
-	width: 100px;
-	background: #ac2925;
-	font-weight: bold;
-	color: white;
-	border: 0 none;
-	border-radius: 1px;
-	cursor: pointer;
-	padding: 10px 5px;
-	margin: 10px 5px;
+    width: 100px;
+    background: #ac2925;
+    font-weight: bold;
+    color: white;
+    border: 0 none;
+    border-radius: 1px;
+    cursor: pointer;
+    padding: 10px 5px;
+    margin: 10px 5px;
 }
+
 #msform .action-button:hover, #msform .action-button:focus {
-	box-shadow: 0 0 0 2px white, 0 0 0 3px #ac2925;
+    box-shadow: 0 0 0 2px white, 0 0 0 3px #ac2925;
 }
+
 .fs-title {
-	font-size: 15px;
-	text-transform: uppercase;
-	color: #ac2925;
-	margin-bottom: 10px;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: #ac2925;
+    margin-bottom: 10px;
 }
+
 .fs-subtitle {
-	font-weight: normal;
-	font-size: 13px;
-	color: #666;
-	margin-bottom: 20px;
+    font-weight: normal;
+    font-size: 13px;
+    color: #666;
+    margin-bottom: 20px;
 }
+
 #progressbar {
-	margin-bottom: 30px;
-	overflow: hidden;
-	counter-reset: step;
+    margin-bottom: 30px;
+    overflow: hidden;
+    counter-reset: step;
 }
+
 #progressbar li {
-	list-style-type: none;
-	color: white;
-	text-transform: uppercase;
-	font-size: 9px;
-	width: 50%;
-	float: left;
-	position: relative;
+    list-style-type: none;
+    color: white;
+    text-transform: uppercase;
+    font-size: 9px;
+    width: 50%;
+    float: left;
+    position: relative;
 }
+
 #progressbar li:before {
-	content: counter(step);
-	counter-increment: step;
-	width: 20px;
-	line-height: 20px;
-	display: block;
-	font-size: 10px;
-	color: #333;
-	background: white;
-	border-radius: 3px;
-	margin: 0 auto 5px auto;
+    content: counter(step);
+    counter-increment: step;
+    width: 20px;
+    line-height: 20px;
+    display: block;
+    font-size: 10px;
+    color: #333;
+    background: white;
+    border-radius: 3px;
+    margin: 0 auto 5px auto;
 }
+
 #progressbar li:after {
-	content: '';
-	width: 100%;
-	height: 2px;
-	background: white;
-	position: absolute;
-	left: -50%;
-	top: 9px;
-	z-index: -1;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: white;
+    position: absolute;
+    left: -50%;
+    top: 9px;
+    z-index: -1;
 }
+
 #progressbar li:first-child:after {
-	content: none; 
+    content: none;
 }
-#progressbar li.active:before,  #progressbar li.active:after{
-	background: #ac2925;
-	color: white;
+
+#progressbar li.active:before, #progressbar li.active:after {
+    background: #ac2925;
+    color: white;
 }
 
 .column {
-	 float: left;
-	 width: 33.33%;
-	 padding: 10px;
- }
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+}
 
+.dropdown-menu {
+    margin: 1px 126px 0px !important;
+    width: 200px !important;
+}
+
+.input-datepicker,
+.input-daterange,
+.input-daterange .input-group-addon {
+    position: relative;
+}
+
+.input-datepicker .form-control,
+.input-daterange .form-control {
+    padding-left: 32px;
+}
+
+.input-datepicker:before,
+.input-daterange:before,
+.input-daterange .input-group-addon:before {
+    content: "\e916";
+    font-family: 'Material Icons' !important;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    white-space: nowrap;
+    word-wrap: normal;
+    position: absolute;
+    z-index: 9;
+    pointer-events: none;
+}
+
+.input-datepicker:before {
+    top: 9px;
+    left: 8px;
+}
+
+.input-daterange:before {
+    top: 9px;
+    left: 8px;
+}
+
+.input-daterange .input-group-addon:before {
+    top: 9px;
+    left: 100%;
+    margin-left: 8px;
+}
+
+.width_btn {
+    width: 200px;
+}
+
+input:invalid + span:after {
+    content: '✖';
+    padding-left: 5px;
+}
+
+input:valid + span:after {
+    content: '✓';
+    padding-left: 5px;
+}
